--- a/markdown/03_create_master_file_table.Rmd
+++ b/markdown/03_create_master_file_table.Rmd
@@ -3,34 +3,14 @@ title: "Create Master File Table"
 date: "Created: 2018-08-07 <br> Updated: `r Sys.Date()`"
 output: 
   html_notebook:
+    toc: true
+    toc_float: true
     css: custom-css.css
 ---
   
-# Table of contents
-  
-* [Overview](#overview)   
-* [Create master file table](#create-table)   
-* [Read-in all text from code files](#read-text)   
-* [User-created functions](#functions)   
-* [Save master file table for use later](#save)   
-            
-            
 # Overview {#overview}
             
-I needed to come up with a better method for tracking notes/documentation/file dependencies in analysis projects. The goal of Pathfinder is to help track file dependencies in research projects created in RStudio. Perhaps other things later. 
-            
-Assumptions:    
-1. Pathfinder will typically be deployed in R projects.   
-            
-* When deployed in R projects, Pathfinder will automatically detect the .Rproj file and the path to that .Rproj file will be se as the root directory.   
-            
-* If the user desires a different behavior (e.g., target a different project than the one the user is currently working in or mapping dependencies among a collection of files that do not exist in an R project) then the path can be specified manually.    
-            
-    - The specified path will serve as the root directory. Pathfinder will attempt to gather dependency information about every file in the root directory and all child directories.   
-            
-    - If the user is not in an R project and a path is not specified, then Pathfinder will set the current directory to be the project root. Pathfinder will attempt to gather dependency information about every file in the root directory and all child directories.
-            
-2. Therefore, to use Pathfinder the user must be in an open R project, provide a file path, or both.
+At this point, I have a list of all files under the project root.
             
             
 # Load packages and data
@@ -42,18 +22,23 @@ Sys.setenv(TZ = "US/Central")
 
 ```{r message=FALSE}
 library(tidyverse)
+source('../r/get_file_name_w_extension.R')
 ```
 
 ## Root directory path
 
+Gotten with get_project_root
+
 ```{r}
-root_dir <- readr::read_rds("data/root_dir.rds")
+root_dir <- readr::read_rds("../data/root_dir.rds")
 ```
 
 ## List of files under the root directory
 
+Gotten with check_for_rproj
+
 ```{r}
-root_dir_file_list <- readr::read_rds("data/root_dir_file_list")
+root_dir_file_list <- readr::read_rds("../data/root_dir_file_list")
 ```
             
             
@@ -86,9 +71,14 @@ This regex starts scanning from the end of the string ($) for one or more (+) no
 
 ```{r}
 root_dir_file_table <- root_dir_file_table %>% 
-  mutate(file_short_name = stringr::str_extract(files_under_root, "(?<=\\/)\\S+$"))
+  mutate(file_short_name = get_file_name_w_extension(root_dir_file_list))
 root_dir_file_table
 ```
+
+# Left off here. I just made this an r script. Do the same for the other functions below. Want to break this up into a bunch of small functions that work together.
+
+
+
             
             
 ## Strip extension from file name
