--- a/markdown/03_create_master_file_table.Rmd
+++ b/markdown/03_create_master_file_table.Rmd
@@ -23,6 +23,9 @@ Sys.setenv(TZ = "US/Central")
 ```{r message=FALSE}
 library(tidyverse)
 source('../r/get_file_name_w_extension.R')
+source('../r/remove_file_extension.R')
+source('../r/get_file_extension.R')
+source('../r/classify_file_type.R')
 ```
 
 ## Root directory path
@@ -71,16 +74,11 @@ This regex starts scanning from the end of the string ($) for one or more (+) no
 
 ```{r}
 root_dir_file_table <- root_dir_file_table %>% 
-  mutate(file_short_name = get_file_name_w_extension(root_dir_file_list))
+  mutate(file_name_w_extension = get_file_name_w_extension(root_dir_file_list))
 root_dir_file_table
 ```
 
-# Left off here. I just made this an r script. Do the same for the other functions below. Want to break this up into a bunch of small functions that work together.
 
-
-
-            
-            
 ## Strip extension from file name
 
 This will be used later when we matching code files with output files based on file name (assumes knitting).
@@ -90,7 +88,7 @@ This regex grabs just the file name without the extension. Starting at the begin
 ```{r}
 root_dir_file_table <- root_dir_file_table %>% 
   mutate(
-    file_name_no_extension = str_extract(file_short_name, "^\\w+(?=\\.)")
+    file_name_no_extension = remove_file_extension(file_name_w_extension)
   )
 
 root_dir_file_table
@@ -103,7 +101,7 @@ This regex starts scanning from the beginning of the string for one or more (+) 
 
 ```{r}
 root_dir_file_table <- root_dir_file_table %>% 
-  mutate(file_extension = stringr::str_extract(file_short_name, "(?<=\\.)\\S+"))
+  mutate(file_extension = get_file_extension(file_name_w_extension))
 root_dir_file_table
 ```
             
